Added modular scss + an example of how it works

--- a/.eslintrc
+++ b/.eslintrc
@@ -12,5 +12,9 @@
         },
         "sourceType": "module"
     },
-    "extends": "eslint:recommended"
+    "extends": "eslint:recommended",
+    "rules": {
+        "no-unused-vars": 0,
+        "no-console": 0
+    }
 }
