Added dev/prod configs

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Boilerplate for QS client-side projects.",
   "main": "index.js",
   "scripts": {
+    "prod": "NODE_ENV=production webpack -p --config webpack.prod.config.js",
+    "dev": "webpack-dev-server -d --devtool eval --progress --config webpack.dev.config.js",
+    "clean": "rm -fr dev_build dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
