--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "html-webpack-plugin": "^2.7.2",
     "html-webpack-template": "^3.0.2",
     "jsdom": "^7.2.2",
+    "json-loader": "^0.5.4",
     "mocha": "^2.4.2",
     "node-sass": "^3.4.2",
     "react-hot-loader": "^1.3.0",
@@ -43,6 +44,7 @@
   "dependencies": {
     "immutable": "^3.7.6",
     "react": "^0.14.6",
-    "react-dom": "^0.14.6"
+    "react-dom": "^0.14.6",
+    "redux": "^3.0.5"
   }
 }
