--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "chai-immutable": "^1.5.3",
     "css-loader": "^0.23.1",
     "eslint": "^2.0.0-beta.2",
+    "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.7.2",
     "html-webpack-template": "^3.0.2",
     "jsdom": "^7.2.2",
@@ -38,6 +39,7 @@
     "react-hot-loader": "^1.3.0",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.12",
     "webpack-dev-server": "^1.14.1"
   },
