--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
   "dependencies": {
     "immutable": "^3.7.6",
     "react": "^0.14.6",
+    "react-bootstrap": "^0.28.3",
     "react-dom": "^0.14.6",
+    "react-redux": "^4.4.0",
     "redux": "^3.0.5"
   }
 }
