--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "mocha": "^2.4.2",
     "node-sass": "^3.4.2",
     "react-hot-loader": "^1.3.0",
+    "redux-devtools": "^3.1.1",
+    "redux-devtools-dock-monitor": "^1.1.0",
+    "redux-devtools-log-monitor": "^1.0.5",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
