--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "node-sass": "^3.4.2",
     "react-hot-loader": "^1.3.0",
     "redux-devtools": "^3.1.1",
+    "redux-devtools-dispatch": "^2.0.1",
     "redux-devtools-dock-monitor": "^1.1.0",
     "redux-devtools-log-monitor": "^1.0.5",
+    "redux-devtools-multiple-monitors": "^1.0.0",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
