--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react": "^0.14.6",
     "react-bootstrap": "^0.28.3",
     "react-dom": "^0.14.6",
+    "react-modal": "^0.6.1",
     "react-redux": "^4.4.0",
     "redux": "^3.0.5"
   }
