--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "babel-core": "^6.4.5",
     "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
     "chai": "^3.4.1",
     "chai-immutable": "^1.5.3",
     "css-loader": "^0.23.1",
@@ -36,25 +35,15 @@
     "json-loader": "^0.5.4",
     "mocha": "^2.4.2",
     "node-sass": "^3.4.2",
-    "react-hot-loader": "^1.3.0",
-    "redux-devtools": "^3.1.1",
-    "redux-devtools-dispatch": "^2.0.1",
-    "redux-devtools-dock-monitor": "^1.1.0",
-    "redux-devtools-log-monitor": "^1.0.5",
-    "redux-devtools-multiple-monitors": "^1.0.0",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
+    "uglify-js-harmony": "^2.6.2",
     "url-loader": "^0.5.7",
     "webpack": "^1.12.12",
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "immutable": "^3.7.6",
-    "react": "^0.14.6",
-    "react-bootstrap": "^0.28.3",
-    "react-dom": "^0.14.6",
-    "react-modal": "^0.6.1",
-    "react-redux": "^4.4.0",
-    "redux": "^3.0.5"
+    "script-loader": "^0.7.0",
+    "slim-js": "^2.2.0"
   }
 }
