--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "qs-client-boilerplate",
-  "version": "1.0.1",
+  "name": "slimjs-client-boilerplate",
+  "version": "1.0.0",
   "description": "Boilerplate for QS client-side projects.",
   "main": "index.js",
   "scripts": {
@@ -11,15 +11,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/QuantifiedSelfless/qs-client-boilerplate.git"
+    "url": "git+https://github.com/eavichay/slim-webpack-boilerplate.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/QuantifiedSelfless/qs-client-boilerplate/issues"
+    "url": "https://github.com/eavichay/slim-webpack-boilerplate/issues"
   },
-  "homepage": "https://github.com/QuantifiedSelfless/qs-client-boilerplate#readme",
+  "homepage": "https://github.com/eavichay/slim-webpack-boilerplate",
   "devDependencies": {
     "babel-core": "^6.4.5",
     "babel-loader": "^6.2.1",
