--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "slimjs-client-boilerplate",
   "version": "1.0.0",
-  "description": "Boilerplate for QS client-side projects.",
+  "description": "Slim.js webpack boilerplate.",
   "main": "index.js",
   "scripts": {
     "prod": "NODE_ENV=production webpack -p --config webpack.prod.config.js",
