--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Slim.js webpack boilerplate.",
   "main": "index.js",
   "scripts": {
-    "prod": "NODE_ENV=production webpack -p --config webpack.prod.config.js",
+    "prod": "NODE_ENV=production webpack -p --progress --display-chunks --profile --config webpack.prod.config.js",
     "dev": "webpack-dev-server --progress --config webpack.dev.config.js",
     "clean": "rm -fr dev_build dist",
     "test": "echo \"Error: no test specified\" && exit 1"
