adding webcomponents lite

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "slim-js": "^2.5.1"
+    "slim-js": "^2.5.1",
+    "webcomponents-lite": "^0.6.0"
   }
 }
