--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   "devDependencies": {
     "babel-core": "^6.4.5",
     "babel-loader": "^6.2.1",
+    "babel-plugin-transform-decorators": "^6.24.1",
+    "babel-preset-env": "^1.4.0",
     "babel-preset-es2015": "^6.3.13",
     "chai": "^3.4.1",
     "chai-immutable": "^1.5.3",
@@ -44,6 +46,6 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
-    "slim-js": "^2.6.4"
+    "slim-js": "^2.8.3"
   }
 }
