--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,15 @@
 .settings/
 
 
-#System Files
+# System Files
 .DS_Store
 Thumbs.db
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# tmp
+data
+.env
