Initial setup for application
Build setup is largely inspired from https://github.com/KyleU/boilerplay with few changes

- Removed the benchmark, monitoring related utils project
- Added build definition to include a client with scalajs-react for cross project
- Added dependencies for scalajs-react
- Updated the version for scalajs web to the latest version.
- Dependency injection using macwire.

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,43 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
+*.class
+*.log
 
-# dependencies
-/node_modules
-/bower_components
+# sbt specific
+.cache/
+.history
+.lib/
+dist/*
+target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
 
-# IDEs and editors
-/.idea
+# Scala-IDE specific
+.scala_dependencies
+.worksheet
+.cache*
+.settings
 .project
 .classpath
-*.launch
-.settings/
+*/bin
 
+# IntelliJ IDEA
+.idea
+*.iml
+out
+*.sc
 
-#System Files
-.DS_Store
-Thumbs.db
+# GitBook
+doc/_book
+
+# web hook/service
+#.travis.yml
+
+#node modules
+node_modules/
+
+*.patch
+
+.toDelete
+
+public/
