Adding header, footer and home view
Added scalajs-react router to render home view at /#/ route.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -25,14 +25,12 @@ play {
   filters {
     headers {
       contentSecurityPolicy = "default-src 'self'; "
-      contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" img-src 'self' data:;"
-      contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" style-src 'self' 'unsafe-inline' cdnjs.cloudflare.com maxcdn.bootstrapcdn.com cdn.jsdelivr.net fonts.googleapis.com;"
-      contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" font-src 'self' cdnjs.cloudflare.com fonts.gstatic.com fonts.googleapis.com maxcdn.bootstrapcdn.com fonts.googleapis.com;"
+      contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" img-src 'self' data: i.imgur.com ;"
+      contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" style-src 'self' 'unsafe-inline' code.ionicframework.com demo.productionready.io fonts.googleapis.com;"
+      contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" font-src 'self' code.ionicframework.com fonts.googleapis.com fonts.gstatic.com ;"
       contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" connect-src ws: 'self';"
       contentSecurityPolicy = ${play.filters.headers.contentSecurityPolicy}" frame-src 'self' ;"
     }
-
-
 
     csrf {
       cookie {
