--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
     "presets": ["es2015"],
     "plugins": [
+        "transform-decorators-legacy",
         "transform-decorators",
         "transform-custom-element-classes",
         "transform-es2015-classes"]
