--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
         "mocha": true,
         "node": true
     },
+    "parser": "babel-eslint",
     "parserOptions": {
         "ecmaVersion": 6,
         "ecmaFeatures": {
