Adding initial tables

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -59,7 +59,7 @@ play {
 db {
   default {
     driver=org.postgresql.Driver
-    url = "jdbc:postgresql:test"
+    url = "jdbc:postgresql:osis"
     username = test
     password = test
     migration {
