Adding models to shared

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -59,9 +59,9 @@ play {
 db {
   default {
     driver=org.postgresql.Driver
-    url = "jdbc:postgresql:osis"
-    username = test
-    password = test
+    url = "jdbc:postgresql:omis"
+    username = omis
+    password = omis
     migration {
       initOnMigrate = true
     }
