--- a/server/src/main/resources/silhouette.conf
+++ b/server/src/main/resources/silhouette.conf
@@ -1,18 +1,13 @@
 silhouette {
+  # JWT authenticator settings
+  authenticator.headerName="X-Auth-Token"
+  authenticator.issuerClaim="play-angular-silhouette"
+  authenticator.encryptSubject=true
+  authenticator.authenticatorExpiry=12 hours
+  authenticator.sharedSecret="changeme"
 
-  # Authenticator settings
-  authenticator {
-    cookieSigner = "60d84c1a41648ae258b57e8b5727sign"
-    cookieName = "authenticator"
-    cookiePath = "/"
-    secureCookie = false // Disabled for testing on localhost without SSL, otherwise cookie couldn't be set
-    httpOnlyCookie = true
-    useFingerprinting = false // enable later
-    authenticatorIdleTimeout = 100 minutes
-    authenticatorExpiry = 12 hours
+  authenticator.rememberMe.authenticatorExpiry=30 days
+  authenticator.rememberMe.authenticatorIdleTimeout=5 days
 
-    rememberMe.cookieMaxAge = 30 days
-    rememberMe.authenticatorIdleTimeout = 5 days
-    rememberMe.authenticatorExpiry = 30 days
-  }
+  authenticator.crypter.key = "[changeme]" // A unique encryption key
 }
