add docker config

--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,16 @@
         "codeception/specify": "~0.4.3"
     },
     "config": {
-        "process-timeout": 1800
+        "process-timeout": 1800,
+        "fxp-asset": {
+          "installer-paths": {
+            "npm-asset-library": "vendor/npm",
+            "bower-asset-library": "vendor/bower"
+          },
+          "vcs-driver-options": {
+                "github-no-api": true
+          }
+        }
     },
     "scripts": {
         "post-create-project-cmd": [
@@ -48,10 +57,6 @@
             "generateCookieValidationKey": [
                 "config/web.php"
             ]
-        },
-        "asset-installer-paths": {
-            "npm-asset-library": "vendor/npm",
-            "bower-asset-library": "vendor/bower"
         }
     }
 }
