--- a/package.json
+++ b/package.json
@@ -50,5 +50,7 @@
     "webpack": "^1.12.12",
     "webpack-dev-server": "^1.14.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "slim-js": "*"
+  }
 }
