updates for slim 2.9.12

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "target": "ES6",
+        "target": "esnext",
         "experimentalDecorators": true
     }
 }
