--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,10 @@
 {
-    "presets": ["es2015"],
-    "plugins": [
-        "transform-decorators-legacy",
-        "transform-decorators",
-        "transform-custom-element-classes",
-        "transform-es2015-classes"]
+    "presets": ["env"],
+    "plugins": ["transform-decorators-legacy", "transform-class-properties",
+        [
+            "transform-jsx", {
+                "function": "jsx"
+            }
+        ]
+    ]
 }
