--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "Slim.js webpack boilerplate.",
   "main": "index.js",
   "scripts": {
-    "prod": "NODE_ENV=production webpack -p --progress --display-chunks --profile --config webpack.prod.config.js",
-    "dev": "webpack-dev-server --progress --config webpack.dev.config.js",
-    "clean": "rm -fr dev_build dist",
+    "build": "webpack",
+    "start": "webpack-dev-server --watch --open --progress --colors --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,37 +19,24 @@
     "url": "https://github.com/eavichay/slim-webpack-boilerplate/issues"
   },
   "homepage": "https://github.com/eavichay/slim-webpack-boilerplate",
-  "devDependencies": {
-    "babel": "^6.23.0",
-    "babel-core": "^6.4.5",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^6.2.1",
-    "babel-plugin-transform-custom-element-classes": "^0.1.0",
-    "babel-plugin-transform-decorators": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.4.0",
-    "babel-preset-es2015": "^6.3.13",
-    "chai": "^3.4.1",
-    "chai-immutable": "^1.5.3",
-    "css-loader": "^0.23.1",
-    "eslint": "^2.13.1",
-    "file-loader": "^0.8.5",
-    "html-webpack-plugin": "^2.7.2",
-    "html-webpack-template": "^3.0.2",
-    "jsdom": "^7.2.2",
-    "json-loader": "^0.5.4",
-    "mocha": "^2.4.2",
-    "node-sass": "^3.4.2",
-    "sass-loader": "^3.1.2",
-    "script-loader": "^0.7.0",
-    "style-loader": "^0.13.0",
-    "uglify-js-harmony": "^2.6.2",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.12.12",
-    "webpack-dev-server": "^1.14.1"
-  },
   "dependencies": {
-    "slim-js": "*"
+    "babel-cli": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-jsx": "^2.0.0",
+    "babel-preset-env": "^1.6.0",
+    "clean-webpack-plugin": "^0.1.17",
+    "css-loader": "^0.28.7",
+    "html-webpack-plugin": "^2.30.1",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
+    "slim-js": "*",
+    "style-loader": "^0.19.0",
+    "ts-loader": "^2.3.7",
+    "typescript": "^2.5.3",
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.9.1"
   }
 }
