--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
-    "slim-js": "*",
+    "slim-js": "^2.9.14",
     "style-loader": "^0.19.0",
     "ts-loader": "^2.3.7",
     "typescript": "^2.5.3",
