--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "slim-js": "^2.9.14",
+    "slix": "^0.2.3",
     "style-loader": "^0.19.0",
     "ts-loader": "^2.3.7",
     "typescript": "^2.5.3",
