--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,29 @@
 {
-    "name": "slim/slim-skeleton",
-    "description": "A Slim Framework skeleton application for rapid development",
-    "keywords": ["microframework", "rest", "router", "psr7"],
-    "homepage": "http://github.com/slimphp/Slim-Skeleton",
+    "name": "alhoqbani/slim-php-realworld-example-app",
+    "description": "Slim-PHP codebase containing real world examples (CRUD, auth, advanced patterns, etc) that adheres to the [RealWorld](https://github.com/gothinkster/realworld) spec and API",
+    "keywords": ["realworld", "example", "jwt", "authentication", "crud"],
+    "homepage": "https://github.com/alhoqbani/slim-php-realworld-example-app",
     "license": "MIT",
     "authors": [
         {
-            "name": "Josh Lockhart",
-            "email": "info@joshlockhart.com",
-            "homepage": "http://www.joshlockhart.com/"
+            "name": "Hamoud Alhoqbani",
+            "email": "h.alhoqbani@gmail.com",
+            "homepage": "https://github.com/alhoqbani/"
         }
     ],
     "require": {
         "php": ">=5.5.0",
-        "slim/slim": "^3.1",
+        "slim/slim": "^3.9",
         "slim/php-view": "^2.0",
-        "monolog/monolog": "^1.17"
+        "monolog/monolog": "^1.23"
     },
     "require-dev": {
-        "phpunit/phpunit": ">=4.8 < 6.0"
+        "phpunit/phpunit": "^6.4"
+    },
+    "autoload": {
+      "psr-4": {
+          "Conduit\\": "src/Conduit"
+      }
     },
     "autoload-dev": {
         "psr-4": {
