--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "php": ">=5.5.0",
         "slim/slim": "^3.9",
         "slim/php-view": "^2.0",
-        "monolog/monolog": "^1.23"
+        "monolog/monolog": "^1.23",
+        "illuminate/database": "^5.5"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.4"
