--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "slim/slim": "^3.9",
         "slim/php-view": "^2.0",
         "monolog/monolog": "^1.23",
-        "illuminate/database": "^5.5"
+        "illuminate/database": "^5.5",
+        "robmorgan/phinx": "dev-master#4c26aeb"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.4"
@@ -27,6 +28,7 @@
       }
     },
     "autoload-dev": {
+        "classmap": ["database/"],
         "psr-4": {
             "Tests\\": "tests/"
         }
