add tuupola/slim-jwt-auth package

--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "monolog/monolog": "^1.23",
         "illuminate/database": "^5.5",
         "robmorgan/phinx": "dev-master#4c26aeb",
-        "vlucas/phpdotenv": "^2.4"
+        "vlucas/phpdotenv": "^2.4",
+        "tuupola/slim-jwt-auth": "^2.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.4"
