--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "illuminate/database": "^5.5",
         "robmorgan/phinx": "dev-master#4c26aeb",
         "vlucas/phpdotenv": "^2.4",
-        "tuupola/slim-jwt-auth": "^2.3"
+        "tuupola/slim-jwt-auth": "^2.3",
+        "fzaninotto/faker": "^1.7"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.4"
