--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "robmorgan/phinx": "dev-master#4c26aeb",
         "vlucas/phpdotenv": "^2.4",
         "tuupola/slim-jwt-auth": "^2.3",
-        "fzaninotto/faker": "^1.7"
+        "fzaninotto/faker": "^1.7",
+        "respect/validation": "^1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.4"
