--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "vlucas/phpdotenv": "^2.4",
         "tuupola/slim-jwt-auth": "^2.3",
         "fzaninotto/faker": "^1.7",
-        "respect/validation": "^1.1"
+        "respect/validation": "^1.1",
+        "league/fractal": "^0.17.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.4"
