--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "url": "https://github.com/eavichay/slim-webpack-boilerplate/issues"
   },
   "homepage": "https://github.com/eavichay/slim-webpack-boilerplate",
-  "dependencies": {
+  "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-syntax-jsx": "^6.18.0",
@@ -32,12 +32,14 @@
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
-    "slim-js": "^2.9.14",
-    "slix": "^0.2.3",
     "style-loader": "^0.19.0",
     "ts-loader": "^2.3.7",
     "typescript": "^2.5.3",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1"
+  },
+  "dependencies": {
+    "slim-js": "^3.0.6",
+    "slix": "^0.2.3"
   }
 }
