parallel user me request at home component

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
     "moment": "^2.21.0",
+    "morgan": "^1.9.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-loadable": "^5.3.1",
