--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "jest",
     "hot": "rm -rf ./dist && mkdir ./dist && NODE_ENV=development webpack -d --config=./webpack/config.server.js --mode=development && NODE_ENV=development webpack -d --config=./webpack/config.client.js --mode=development && node ./dev_server",
     "build": "rm -rf ./dist && mkdir ./dist && NODE_ENV=production  webpack --config=./webpack/config.server.js --mode=production && NODE_ENV=production webpack -p --config=./webpack/config.client.js --mode=production",
-    "start": "NODE_ENV=production node ./server"
+    "start": "NODE_ENV=production node ./server",
+    "lint": "eslint src/ --ext .js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
   },
   "homepage": "https://github.com/apapacy/realworld-react-universal-hot#readme",
   "devDependencies": {
+    "babel-eslint": "^8.2.2",
     "babel-loader": "^7.1.3",
     "babel-plugin-dynamic-import-node": "^1.2.0",
     "babel-plugin-react-transform": "^3.0.0",
@@ -37,6 +39,11 @@
     "babel-preset-stage-3": "^6.24.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "eslint": "^4.18.2",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
     "jest": "^22.4.2",
     "react-test-renderer": "^16.2.0",
     "react-transform": "0.0.3",
@@ -49,8 +56,10 @@
     "cookie-encrypter": "^0.2.3",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
+    "lodash": "^4.17.5",
     "moment": "^2.21.0",
     "morgan": "^1.9.0",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-loadable": "^5.3.1",
