Add repository to package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "reason-react-realworld-example-app",
   "version": "0.1.0",
-  "license" : "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jihchi/reason-react-realworld-example-app.git"
+  },
+  "license": "MIT",
   "dependencies": {
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
@@ -19,11 +23,6 @@
       "last 2 firefox versions",
       "last 2 edge versions"
     ],
-    "production": [
-      ">1%",
-      "last 4 versions",
-      "Firefox ESR",
-      "not ie < 11"
-    ]
+    "production": [">1%", "last 4 versions", "Firefox ESR", "not ie < 11"]
   }
 }
