Use header / footer from template layout

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "ReasonReact App",
+  "short_name": "Conduit",
   "name": "Exemplary real world application built with ReasonReact (ReasonML)",
   "icons": [
     {
