--- a/bsconfig.json
+++ b/bsconfig.json
@@ -10,7 +10,12 @@
   ],
   "suffix": ".bs.js",
   "namespace": true,
-  "bs-dependencies": ["reason-react"],
+  "bs-dependencies": [
+    "@glennsl/bs-json",
+    "bs-fetch",
+    "remotedata-re",
+    "reason-react"
+  ],
   "bsc-flags": ["-bs-super-errors"],
   "refmt": 3
 }
