--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@glennsl/bs-json": "^1.2.0",
+    "bs-fetch": "^0.2.1",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-scripts": "2.0.0-next.b2fd8db8",
-    "reason-react": "^0.3.4"
+    "reason-react": "^0.3.4",
+    "remotedata-re": "^0.1.3"
   },
   "scripts": {
     "build": "yarn build:bsb && yarn build:cra",
