Add "bs-webapi" to bs-dependencies

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@glennsl/bs-json": "^1.2.0",
     "bs-fetch": "^0.2.1",
+    "bs-webapi": "^0.8.3",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-scripts": "2.0.0-next.b2fd8db8",
