--- a/bsconfig.json
+++ b/bsconfig.json
@@ -11,6 +11,7 @@
   "suffix": ".bs.js",
   "namespace": true,
   "bs-dependencies": [
+    "bs-webapi",
     "@glennsl/bs-json",
     "bs-fetch",
     "remotedata-re",
