pagination, article-list, article-preview

--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
-    "presets": ["env"],
+    "presets": ["es2016"],
     "plugins": ["transform-decorators-legacy", "transform-class-properties"]
 }
