--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-env": "^1.6.0",
+    "babel-preset-es2016": "^6.24.1",
     "clean-webpack-plugin": "^0.1.17",
     "copy-webpack-plugin": "^4.2.0",
     "css-loader": "^0.28.7",
@@ -44,7 +45,7 @@
   "dependencies": {
     "eventbusjs": "^0.2.0",
     "navigo": "^7.1.2",
-    "slim-js": "^3.2.7",
+    "slim-js": "3.2.8",
     "superagent": "^3.8.2"
   }
 }
