--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /node_modules
 /bower_components
 
+
 # IDEs and editors
 .project
 .vscode
@@ -52,3 +53,4 @@ node_modules
 
 # Distributable folder (build it yourself)
 ./dist
+dist
