--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Slim.js webpack boilerplate.",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
-    "start": "webpack-dev-server --profile --watch --progress --colors --config webpack.config.js",
+    "build":
+      "export NODE_ENV=production && webpack --config webpack.config.js --profile --json > stats.json",
+    "start":
+      "webpack-dev-server --profile --watch --progress --colors --config webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,17 +24,20 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2016": "^6.24.1",
     "clean-webpack-plugin": "^0.1.17",
     "copy-webpack-plugin": "^4.2.0",
     "css-loader": "^0.28.7",
+    "es6-loader": "^0.2.0",
     "file-loader": "^1.1.5",
     "html-loader": "^0.5.1",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^3.4.2",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
@@ -40,15 +45,15 @@
     "ts-loader": "^2.3.7",
     "typescript": "^2.5.3",
     "uglifyjs-webpack-plugin": "^1.2.5",
-    "webpack": "^3.6.0",
+    "webpack": "^4.8.1",
     "webpack-bundle-analyzer": "^2.11.1",
-    "webpack-dev-server": "^2.9.1",
+    "webpack-cli": "^2.1.3",
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-dev-server": "^3.1.4",
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "dependencies": {
-    "eventbusjs": "^0.2.0",
     "navigo": "^7.1.2",
-    "slim-js": "3.2.8",
-    "superagent": "^3.8.2"
+    "slim-js": "^3.2.9"
   }
 }
