--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,10 +1,20 @@
 {
   "name": "reason-react-realworld-example-app",
   "reason": { "react-jsx": 2 },
-  "sources": ["src"],
+  "sources": [
+    {
+      "dir": "src",
+      "subdirs": [
+        {
+          "dir": "__tests__",
+          "type": "dev"
+        }
+      ]
+    }
+  ],
   "package-specs": [
     {
-      "module": "es6",
+      "module": "commonjs",
       "in-source": true
     }
   ],
@@ -18,6 +28,7 @@
     "remotedata-re",
     "reason-react"
   ],
+  "bs-dev-dependencies": ["@glennsl/bs-jest"],
   "bsc-flags": ["-bs-super-errors"],
   "refmt": 3
 }
