--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "format:md": "prettier --write --parser markdown",
     "format:re": "find . -regex '.+\\.rei?' -exec refmt --in-place {} \\;",
     "pre-commit": "lint-staged && yarn test:ci",
+    "predeploy": "yarn build",
     "start": "concurrently --kill-others --names \"ReasonML,CRA\" --prefix-colors \"red.bgBlack.bold,yellow.bgBlack.bold\" \"yarn start:bsb\" \"yarn start:cra\"",
     "start:bsb": "bsb -make-world -w",
     "start:cra": "react-scripts start",
