Add jest-fetch-mock for mocking http request

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.4",
     "husky": "^1.0.0-rc.6",
+    "jest-fetch-mock": "^1.6.5",
     "lint-staged": "^7.2.0",
     "prettier": "^1.13.5"
   },
