Add test:watch script

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "start:bsb": "bsb -make-world -w",
     "start:cra": "react-scripts start",
     "test": "react-scripts test --env=jsdom",
-    "test:ci": "CI=true yarn test"
+    "test:ci": "CI=true yarn test",
+    "test:watch": "yarn test --watch"
   },
   "dependencies": {
     "@glennsl/bs-json": "^2.0.0",
