Add `format` run-script

--- a/package.json
+++ b/package.json
@@ -8,17 +8,19 @@
   "license": "MIT",
   "scripts": {
     "build": "yarn build:bsb && yarn build:cra",
-    "build:bsb": "bsb -make-world -clean-world",
+    "build:bsb": "bsb -make-world",
     "build:cra": "react-scripts build",
     "coverage": "yarn test --coverage",
     "deploy": "cd build && surge --domain reason-react-realworld-example-app.surge.sh",
+    "format": "yarn format:json **/*.json && yarn format:md **/*.md && find ./src/ -regex '.+\\.rei?' -exec yarn format:re {} \\;",
     "format:json": "prettier --write --parser json",
     "format:md": "prettier --write --parser markdown",
-    "format:re": "find . -regex '.+\\.rei?' -exec refmt --in-place {} \\;",
+    "format:re": "refmt --in-place",
     "pre-commit": "lint-staged && yarn test:ci",
     "predeploy": "yarn build",
+    "pretest": "yarn build:bsb",
     "start": "concurrently --kill-others --names \"ReasonML,CRA\" --prefix-colors \"red.bgBlack.bold,yellow.bgBlack.bold\" \"yarn start:bsb\" \"yarn start:cra\"",
-    "start:bsb": "bsb -make-world -w",
+    "start:bsb": "yarn build:bsb -clean-world -w",
     "start:cra": "react-scripts start",
     "test": "react-scripts test --env=jsdom",
     "test:ci": "CI=true yarn test",
