--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "re-formality": "^0.9.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "2.0.0-next.66cc7a90",
+    "react-scripts": "2.0.0-next.3e165448",
     "reason-react": "^0.4.2",
     "remotedata-re": "^0.1.3"
   },
@@ -56,10 +56,9 @@
       "last 2 edge versions"
     ],
     "production": [
-      ">1%",
-      "last 4 versions",
-      "Firefox ESR",
-      "not ie < 11"
+      ">0.25%",
+      "not op_mini all",
+      "ie 11"
     ]
   }
 }
