--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "start:bsb": "yarn build:bsb -clean-world -w",
     "start:cra": "react-scripts start",
     "test": "react-scripts test --env=jsdom",
-    "test:ci": "CI=true yarn test",
-    "test:watch": "yarn test --watch"
+    "test:ci": "CI=true yarn test"
   },
   "dependencies": {
     "@glennsl/bs-json": "^2.0.0",
