--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "format": "yarn format:json **/*.json && yarn format:md **/*.md && find ./src/ -regex '.+\\.rei?' -exec yarn format:re {} \\;",
     "format:json": "prettier --write --parser json",
     "format:md": "prettier --write --parser markdown",
-    "format:re": "refmt --in-place",
+    "format:re": "bsrefmt --in-place",
     "pre-commit": "lint-staged && yarn test:ci",
     "predeploy": "yarn build",
     "pretest": "yarn build:bsb",
@@ -33,7 +33,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "2.0.0-next.3e165448",
-    "reason-react": "^0.4.2",
+    "reason-react": "^0.5.3",
     "remotedata-re": "^0.1.3"
   },
   "devDependencies": {
