--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,10 @@ language: go
 # updates. Any older versions be considered deprecated. Don't bother testing
 # with them.
 go:
-  - "1.10"
+  - "1.x"
+  - "1.8"
+  - "1.10.x"
+  - master
 
 # Only clone the most recent commit.
 git:
