Add official registry to npmrc

--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,6 +1,5 @@
 {
   "{src,examples,__tests__}/**/*.{re,rei}": ["yarn format:re", "git add"],
-  "**/*.md": ["yarn format:md", "git add"],
-  "**/.*rc": ["yarn format:json", "git add"],
-  "**/*.json": ["yarn format:json", "git add"]
+  "./*.md": ["yarn format:md", "git add"],
+  "./.{husky,lintstaged,prettier}rc": ["yarn format:json", "git add"]
 }
