--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "format:json": "prettier --write --parser json",
     "format:md": "prettier --write --parser markdown",
     "format:re": "bsrefmt --in-place",
-    "pre-commit": "lint-staged && yarn test:ci",
     "predeploy": "yarn build",
     "pretest": "yarn build:bsb",
     "start": "concurrently --kill-others --names \"ReasonML,CRA\" --prefix-colors \"red.bgBlack.bold,yellow.bgBlack.bold\" \"yarn start:bsb\" \"yarn start:cra\"",
@@ -24,6 +23,12 @@
     "start:cra": "react-scripts start",
     "test": "react-scripts test --env=jsdom",
     "test:ci": "CI=true yarn test"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "pre-push": "yarn test:ci"
+    }
   },
   "dependencies": {
     "@glennsl/bs-json": "^3.0.0",
