--- a/package.json
+++ b/package.json
@@ -38,12 +38,12 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "2.0.0-next.a671462c",
-    "reason-react": "^0.5.3",
+    "reason-react": "0.5.3",
     "remotedata-re": "^0.1.3"
   },
   "devDependencies": {
     "@glennsl/bs-jest": "^0.4.3",
-    "bs-platform": "^4.0.5",
+    "bs-platform": "4.0.5",
     "concurrently": "^4.0.1",
     "enzyme": "^3.5.0",
     "enzyme-adapter-react-16": "^1.3.1",
