--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-hot-loader": "^4.3.7",
     "react-loadable": "^5.3.1",
     "react-markdown": "^3.2.2",
     "react-redux": "^5.0.7",
@@ -68,10 +69,10 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
-    "webpack": "^4.1.0",
-    "webpack-cli": "^2.0.10",
-    "webpack-dev-middleware": "^3.0.0",
-    "webpack-hot-middleware": "^2.21.2",
-    "webpack-node-externals": "^1.6.0"
+    "webpack": "^4.19.0",
+    "webpack-cli": "^2.1.5",
+    "webpack-dev-middleware": "^3.3.0",
+    "webpack-hot-middleware": "^2.24.0",
+    "webpack-node-externals": "^1.7.2"
   }
 }
