--- a/package.json
+++ b/package.json
@@ -33,22 +33,22 @@
   "dependencies": {
     "@glennsl/bs-json": "^3.0.0",
     "bs-fetch": "^0.3.0",
-    "bs-webapi": "^0.12.2",
+    "bs-webapi": "^0.13.0",
     "re-formality": "^0.10.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.0-next.a671462c",
+    "react-scripts": "2.0.4",
     "reason-react": "0.5.3",
     "remotedata-re": "^0.1.3"
   },
   "devDependencies": {
     "@glennsl/bs-jest": "^0.4.4",
-    "bs-platform": "4.0.5",
+    "bs-platform": "4.0.6",
     "concurrently": "^4.0.1",
-    "enzyme": "^3.6.0",
-    "enzyme-adapter-react-16": "^1.5.0",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.6.0",
     "enzyme-to-json": "^3.3.4",
-    "husky": "^1.0.0-rc.15",
+    "husky": "^1.1.2",
     "jest-fetch-mock": "^1.6.6",
     "lint-staged": "^7.3.0",
     "prettier": "^1.14.3"
