create basic structure

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -22,7 +22,7 @@ package.folders = conf, public, app/views
 # Sets `revel.AppName` for use in-app.
 # Example:
 #   `if revel.AppName {...}`
-app.name = init
+app.name = github.com/klim0v/golang-revel-realworld-starter-kit
 
 # A secret string which is passed to cryptographically sign the cookie to prevent
 # (and detect) user modification.
@@ -35,10 +35,11 @@ app.behind.proxy = false
 
 
 # The IP address on which to listen.
-http.addr =
+http.addr = 0.0.0.0
 
 # The port on which to listen.
-http.port = 9000
+http.port = 9001
+harness.port = 9000
 
 # Whether to use SSL or not.
 http.ssl = false
@@ -113,6 +114,7 @@ i18n.default_language = en
 #  `Static.ServeModule("modulename","public")`
 module.static = github.com/revel/modules/static
 
+module.gorp=github.com/revel/modules/orm/gorp
 
 
 ################################################################################
@@ -195,7 +197,14 @@ log.crit.output = stderr              # Everything that logs something as critic
 # INFO  21:53:55 static server-engine.go:169: Request Stats                             ip=127.0.0.1 path=/public/vendors/datatables.net-buttons/js/buttons.html5.min.js method=GET start=2017/08/31 21:53:55 status=200 duration_seconds=0.0002583 section=requestlog
 log.request.output = stdout
 
-
+db.autoinit   = true
+db.import     = github.com/go-sql-driver/mysql
+db.driver     = mysql
+db.host       = tcp(db)
+db.user       = root
+db.password   = 123123
+db.name       = database
+db.connection = root:123123@tcp(db)/database?&charset=utf8
 
 ################################################################################
 # Section: prod
