Use npm package instead of local copy

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@glennsl/bs-json": "^3.0.0",
     "bs-fetch": "^0.3.1",
     "bs-webapi": "^0.13.0",
+    "let-anything": "^1.0.3",
     "re-formality": "^0.10.0",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
