--- a/bsconfig.json
+++ b/bsconfig.json
@@ -34,6 +34,6 @@
     "bs-react-testing-library"
   ],
   "bsc-flags": ["-bs-super-errors"],
-  "ppx-flags": ["./node_modules/let-anything/lib/bs/native/let_anything.native"],
+  "ppx-flags": ["let-anything/lib/bs/native/let_anything.native"],
   "refmt": 3
 }
