Add warnings.error +101 to bsconfig

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -34,5 +34,8 @@
     "bs-react-testing-library"
   ],
   "bsc-flags": ["-bs-super-errors"],
+  "warnings": {
+    "error": "+101"
+  },
   "refmt": 3
 }
