--- a/package.json
+++ b/package.json
@@ -46,21 +46,21 @@
     "re-formality": "^0.10.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.1",
+    "react-scripts": "2.1.3",
     "reason-react": "0.5.3",
     "remotedata-re": "^0.2.1"
   },
   "devDependencies": {
     "@glennsl/bs-jest": "^0.4.6",
     "bs-dom-testing-library": "^0.3.0",
-    "bs-platform": "4.0.14",
+    "bs-platform": "4.0.17",
     "bs-react-testing-library": "^0.4.0",
     "concurrently": "^4.1.0",
     "husky": "^1.3.1",
     "jest-fetch-mock": "^2.1.0",
     "lint-staged": "^8.1.0",
     "prettier": "^1.15.3",
-    "react-app-rewired": "^1.6.2",
+    "react-app-rewired": "2.0.2-next.0",
     "react-hot-loader": "^4.6.3",
     "react-testing-library": "^5.4.4"
   }
