--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "dependencies": {
     "@glennsl/bs-json": "^3.0.0",
     "bs-fetch": "^0.3.1",
-    "bs-webapi": "^0.13.1",
+    "bs-webapi": "^0.13.2",
     "re-formality": "^0.10.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
@@ -51,7 +51,7 @@
     "remotedata-re": "^0.2.1"
   },
   "devDependencies": {
-    "@glennsl/bs-jest": "^0.4.6",
+    "@glennsl/bs-jest": "^0.4.7",
     "bs-dom-testing-library": "^0.3.0",
     "bs-platform": "4.0.18",
     "bs-react-testing-library": "^0.4.0",
@@ -60,7 +60,7 @@
     "jest-fetch-mock": "^2.1.0",
     "lint-staged": "^8.1.0",
     "prettier": "^1.15.3",
-    "react-app-rewired": "2.0.2-next.0",
+    "react-app-rewired": "2.0.2",
     "react-hot-loader": "^4.6.3",
     "react-testing-library": "^5.4.4"
   }
