--- a/package.json
+++ b/package.json
@@ -52,16 +52,14 @@
   },
   "devDependencies": {
     "@glennsl/bs-jest": "^0.4.7",
-    "bs-dom-testing-library": "^0.3.0",
-    "bs-platform": "5.0.0",
+    "bs-platform": "5.0.2",
     "bs-react-testing-library": "^0.4.0",
     "concurrently": "^4.1.0",
     "husky": "^1.3.1",
-    "jest-fetch-mock": "^2.1.1",
+    "jest-fetch-mock": "^2.1.2",
     "lint-staged": "^8.1.5",
     "prettier": "^1.16.4",
     "react-app-rewired": "2.1.1",
-    "react-hot-loader": "^4.8.1",
-    "react-testing-library": "^6.0.3"
+    "react-hot-loader": "^4.8.3"
   }
 }
