Add the OpenAPI Document

--- a/etc/test.ini
+++ b/etc/test.ini
@@ -1,4 +1,8 @@
-[app:main]
+[pipeline:main]
+pipeline =
+    conduit
+
+[app:conduit]
 use = config:development.ini#conduit
 
 # anything, so that we override the inclusion of pyramid_debugtoolbar from
