Add the first endpoint: tags
This also means that db is now properly integrated and tested, along
with db schema migrations with alembic.

I've also added a bunch of tests and type hints to hit 100% for both
tests and type hints coverages.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,5 +90,6 @@ jobs:
       - run :
           name: run Postman tests
           command: |
+            make devdb
             pipenv run pserve etc/development.ini &
             make postman-tests
