--- a/mypy.ini
+++ b/mypy.ini
@@ -13,7 +13,13 @@ ignore_missing_imports = True
 [mypy-pyramid.*]
 ignore_missing_imports = True
 
+[mypy-pyramid_deferred_sqla.*]
+ignore_missing_imports = True
+
 [mypy-pyramid_heroku.*]
+ignore_missing_imports = True
+
+[mypy-_pytest.*]
 ignore_missing_imports = True
 
 [mypy-pytest.*]
@@ -29,6 +35,9 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 
 [mypy-structlog.*]
+ignore_missing_imports = True
+
+[mypy-testfixtures.*]
 ignore_missing_imports = True
 
 [mypy-transaction.*]
