--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "conduit",
   "env": {
-    "SENTRY_DSN": "https://TODO:TODO@sentry.io/123",
+    "SENTRY_DSN": "https://21b6228b7fb7483fbb3419ea005dcc66:2b02f1b7487f494c9e8495af0a38d7f6@sentry.io/1457710",
   },
   "formation": {
     "web": {
@@ -24,5 +24,8 @@
     {
       "url": "https://github.com/heroku/heroku-buildpack-apt"
     },
+    {
+      "url": "https://github.com/niteoweb/heroku-buildpack-shell#v1.0"
+    }
   ]
 }
